fixed issue with user the user display section overlapping after editing a user info

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,11 @@
 	align-items: center;
 }
 
+.scroll {
+	overflow: scroll;
+	height: 300px;
+}
+
 main {
 	padding-top: 50px;
 }
